# normality

./: .bumpversion.cfg  .gitignore  .travis.yml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  normality.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: build.yml
normality/: __init__.py  cleaning.py  constants.py  encoding.py  paths.py  scripts.py  slugify.py  stringify.py  transliteration.py
test/: test_normality.py  test_paths.py
test/fixtures/: utf-16.txt
tests/: test_cleaning.py  test_normality.py  test_paths.py  test_scripts.py
