[metadata]
license_file = LICENSE
name = normality
author = Friedrich Lindenberg
author_email = friedrich@pudo.org
license = MIT
description = Micro-library to normalize text strings
keywords = text, unicode, normalization, slugs
url = http://github.com/pudo/normality
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
packages = find:
zip_safe = False
install_requires =
    banal >= 1.0.1
    text-unidecode
    chardet
    charset-normalizer >= 2.0.0
include_package_data = True
test_suite = test
namespace_packages =

[options.packages.find]
exclude = ez_setup; examples; tests

[options.extras_require]
icu = pyicu >= 1.9.3
dev =
    pyicu >= 1.9.3
    mypy
    pytest
    types-chardet

[options.package_data]
banal = py.typed

[bdist_wheel]
universal = 1
